--- a/Index.html
+++ b/Index.html
@@ -130,6 +130,11 @@
         <img src="images/03.jpg" style="width:100%">
         <div class="text"></div>
       </div>
+      <div class="mySlides fade">
+        <div class="numbertext"></div>
+        <img src="images/04.jpg" style="width:100%">
+        <div class="text"></div>
+      </div>
       <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
       <a class="next" onclick="plusSlides(1)">&#10095;</a>
     </div>
@@ -138,6 +143,7 @@
       <span class="dot" onclick="currentSlide(1)"></span>
       <span class="dot" onclick="currentSlide(2)"></span>
       <span class="dot" onclick="currentSlide(3)"></span>
+      <span class="dot" onclick="currentSlide(4)"></span>
     </div>
     <script>
       var slideIndex = 0;
